Read more & fix our story spacing

--- a/assets/css/style-new.css
+++ b/assets/css/style-new.css
@@ -108,6 +108,10 @@ body {
   display: none;
 }
 
+#show-less-link {
+  display: none;
+}
+
 section {
   margin-top: 8rem;
 }
@@ -308,12 +312,12 @@ h1 {
 
 #about-us {
   display: grid;
-  grid-template-columns: 20% 1fr;
+  grid-template-columns: 25% 1fr 20%;
   grid-template-rows: auto;
 }
 
 #about-us-title {
-  margin: 1rem 1rem auto 1rem;
+  margin: 1rem 1rem auto 4rem;
   grid-column-start: 1;
 }
 
@@ -646,6 +650,10 @@ footer {
     margin: 5rem 3rem 3rem 3rem;
   }
 
+  #about-us-title {
+    margin-left: 1rem;
+  }
+
   #about-us header h1 {
     font-size: 10rem;
   }
@@ -657,6 +665,7 @@ footer {
 
   #about-us-contents img {
     padding: 5%;
+    padding-bottom: 8rem;
     width: 70%;
   }
 
